{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 101,
  "lineage": "623e1be2-efa8-e7a2-17f8-24dc13d40477",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:loadbalancer/app/load-balancer-dev/761eca4de8932282",
            "arn_suffix": "app/load-balancer-dev/761eca4de8932282",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-dev-84715036.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:loadbalancer/app/load-balancer-dev/761eca4de8932282",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033bca51b1ae076a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07db4ee528707efae"
              },
              {
                "subnet_id": "subnet-0fc234b735471cf3c"
              }
            ],
            "subnets": [
              "subnet-07db4ee528707efae",
              "subnet-0fc234b735471cf3c"
            ],
            "vpc_id": "vpc-077fa75f86ea7e1d7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:774305574519:subnet/subnet-07db4ee528707efae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-07db4ee528707efae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774305574519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-077fa75f86ea7e1d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:774305574519:subnet/subnet-0fc234b735471cf3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0fc234b735471cf3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774305574519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-077fa75f86ea7e1d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:774305574519:vpc/vpc-077fa75f86ea7e1d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0c6d46b9384bb76dd",
            "default_route_table_id": "rtb-013677237201994fa",
            "default_security_group_id": "sg-0a19ade6d24f8f346",
            "dhcp_options_id": "dopt-063048ca72cb9489b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-077fa75f86ea7e1d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013677237201994fa",
            "owner_id": "774305574519"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:listener/app/load-balancer-dev/761eca4de8932282/d3da9ed88008b6b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:targetgroup/target-group/3c84059a8e747b42",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:listener/app/load-balancer-dev/761eca4de8932282/d3da9ed88008b6b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:loadbalancer/app/load-balancer-dev/761eca4de8932282",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:targetgroup/target-group/3c84059a8e747b42",
            "arn_suffix": "targetgroup/target-group/3c84059a8e747b42",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:774305574519:targetgroup/target-group/3c84059a8e747b42",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-077fa75f86ea7e1d7"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:774305574519:security-group/sg-033bca51b1ae076a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033bca51b1ae076a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241117101235424800000001",
            "name_prefix": "terraform-",
            "owner_id": "774305574519",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077fa75f86ea7e1d7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:774305574519:security-group/sg-089ea2d4afb821723",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089ea2d4afb821723",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033bca51b1ae076a9"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20241117102221640200000001",
            "name_prefix": "terraform-",
            "owner_id": "774305574519",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077fa75f86ea7e1d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}